<resources>
    <string name="hello_world">successfull</string>
    <string name="app_name">Edisonorderform</string>
    <string name="openDrawer">openDrawer</string>
    <string name="closeDrawer">closeDrawer</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">privacy</string>
    <string name="nav_about_us">User Settings</string>
    <string name="Chg_pwd">Chg_pwd</string>
    <string name="password_change">Change password</string>
    <string name="privacy_policy">Operator Settings</string>

    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="planets_array">
        <item>Add</item>
        <item>Bedroom</item>
        <item>Living room</item>
        <item>Reception</item>
        <item>Entrance</item>
        <item>Conference</item>
        <item>Dininghall</item>
        <item>Add more</item>

    </string-array>
    <string-array name="clientarray">
        <item>select house</item>
        <item>home1</item>
        <item>home2</item>
        <item>home3</item>
        <item>home4</item>
        <item>home5</item>
        <item>home6</item>


    </string-array>

    <string-array name="spinner1">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>


    </string-array>


    <string-array name="floor">
        <item>floor</item>
        <item>ground floor</item>
        <item>1st floor</item>
        <item>2nd floor</item>
        <item>3rd floor</item>


    </string-array>


    <string-array name="swb_model">
        <item>select SWB</item>
        <item>SWB 1</item>
        <item>SWB 2</item>
        <item>SWB 2+1</item>
        <item>SWB 3</item>
        <item>SWB 5+1</item>
        <item>SWB 8</item>
        <item>OTHER</item>


    </string-array>


    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>

    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter following details :</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <string name="old_passowrd">Old Password</string>
    <string name="new_passowrd">New Password</string>
    <string name="re_passowrd">Re-Enter Password</string>

    <string name="search_result">Search Result!</string>
    <string name="cheese_hunt_hint">Search Here!</string>

    <string name="search_hint">Type and Search</string>
    <string name="menu_search">Search</string>


    <string name="note">Note : Please give Height &amp; Width in feet</string>
    <string name="note2">Note : Please give Length in feet</string>


</resources>
